--- a/src/app/servers/servers.component.html
+++ b/src/app/servers/servers.component.html
@@ -1,6 +1,28 @@
-<button class="btn btn-primary" [disabled]="!allowNewServer">Add Server</button>
-
+<label>Server Name</label>
+<!-- <input type="text" class="form-control" (input)="onUpdateServerName($event)" /> -->
+<input type="text" [(ngModel)]="serverName" />
+<button
+  class="btn btn-primary"
+  [disabled]="!allowNewServer"
+  (click)="onCreateServer()"
+>
+  Add Server
+</button>
+<!-- <p>{{ serverName }}</p> -->
+<P>{{ allowNewServer }}</P>
+<p>{{ serverCreationStatus }}</p>
 <app-server> </app-server>
 <app-server></app-server>
 <app-warning></app-warning>
 <app-success></app-success>
+
+<!-- //Assiginmnet -->
+<input class="form-control" type="text" [(ngModel)]="userName" />
+<p>{{ userName }}</p>
+<button
+  class="btn btn-primary"
+  [disabled]="userName === ''"
+  (click)="onEmpty()"
+>
+  Add
+</button>
