--- a/src/app/server/server.component.html
+++ b/src/app/server/server.component.html
@@ -1,1 +1,6 @@
-<h1>{{ "server" }} id is {{ serverID }} and it is {{ serverStatus }}</h1>
+<p
+  [ngStyle]="{ backgroundColor: getColor() }"
+  [ngClass]="{ online: serverStatus == 'online' }"
+>
+  {{ "server" }} id is {{ serverID }} and it is {{ getServerStatus() }}
+</p>
